envoy_templates/base_file/envoy_db.template.yaml
static_resources:
  listeners:
  - name: listen_otlp_stats #local listener for metrics bound for Otel Collector
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 4319
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: l_otlp_stats
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend_otlp_stats
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: otlp_stats_dyn #cluster pointing to otel collector machine
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

              
  clusters:
  - name: jaeger_stats #cluster pointing to jaeger process for tracing data
    connect_timeout: 5s
    type: STRICT_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: jaeger_stats
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: $JAEGER_ADDR # address of machine running Jaeger 
                port_value: 4317
  - name: otlp_stats_dyn # points to actual otel collector, remove this cluster to not send stats
    connect_timeout: 5s
    type: STRICT_DNS
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}
    load_assignment:
      cluster_name: otlp_stats_dyn
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: $OTEL_ADDR # address of machine running OTel Collector
                port_value: 4319
